# ainb-reflect-memory

./: .env.example  .gitignore  README.md  pyproject.toml
.beads/: issues.jsonl
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: reflect-verify
.github/workflows/: ci.yml  release.yml
docs/: reflect-serve.md  regression-suite.md  setup.md  usage.md
docs/design/: fleet-hermes-adapter-spec.md  fleet-hermes-adapter.md
plugin/: CHANGELOG.md  README.md  codex-hooks.json  copilot-hooks.json  plugin.json  reflect.toml
plugin/.claude-plugin/: plugin.json
plugin/.codex-plugin/: plugin.json
plugin/adapters/: base.py
plugin/assets/: learning_template.md  observation_template.md
plugin/docs/: architecture.md  cost-rearchitecture-plan-spec.md  cost-rearchitecture-plan.md  reflect-architecture.html  retrieval-features.md
plugin/hooks/: README.md  error_occurred_reflect.py  hook_common.py  idle_reflect.sh  install_post_commit.sh  notification_reflect.py  permission_request_reflect.py  post_commit.sh  postcompact_bookkeeping.py  posttooluse_minilearning.py  posttoolusefailure_minilearning.py  precompact_reflect.py  pretooluse_context.py  reflect-drain-bg.sh  reflect-maintenance-watch.sh  registry.py  session_end_reflect.py  sessionstart_drain_reflections.py  settings-snippet.json  stop_reflect.py  subagent_start_recall.py  subagent_stop_reflect.py
plugin/launchd/: com.reflect.drain.plist  com.reflect.forget.plist  com.reflect.idle.plist  com.reflect.maintenance.plist  com.reflect.synthesis.plist
plugin/references/: knowledge_format.md  persona_schema.yaml  schema.yaml
plugin/scripts/: backfill_costs.py  commit_verifier.py  contradiction_detector.py  conventions_generator.py  drain_extract.py  graphml_repair.py  hook_input.py  kb_export.py  kb_import.py  loop_detector.py  metrics_updater.py  mode_loader.py  output_classifier.py  output_generator.py  privacy_filter.py  quota_store.py  reflect_cascade.py  reflect_config.py  reflect_cost.py  reflect_db.py  reflect_events.py  reflect_forget_sweep.py  reflect_gate.py  reflect_synthesis.py  reflect_timeline.sh  regate_backlog.py  signal_detector.py  silent_fail.py  skill_index.py  synthetic_compress.py  test_outcome_parser.py  todo_state.py  validate_sidecar.py
plugin/tests/: inject_recall_preamble.py  test_auto_consolidation.py  test_belief_revision.py  test_commit_verifier.py  test_contradiction_detection.py  test_conventions_doc.py  test_drain_circuit_breaker.py  test_drain_extract.py  test_drain_silent_success.py  test_followup_diagnostic.py  test_forget_sweep.py  test_hook_registry_parity.py  test_hooks_silent_fail.py  test_idle_reflect.py  test_knowledge_gaps.py  test_learning_history.py  test_lifecycle_hooks.py  test_loop_detector.py  test_memory_slots.py  test_mode_loader.py  test_new_hooks.py  test_numeric_confidence.py  test_observations.py  test_output_classifier.py  test_permission_capture.py  test_plugin_skills_manifest.py  test_privacy_filter.py  test_provenance_proof.py  test_quota_store.py  test_recall_bounded_boosts.py  test_recall_branch_aware.py  test_recall_cross_encoder.py  test_recall_fuzzy_cache.py  test_recall_mmr.py  test_recall_project_affinity.py  test_recall_sharding.py  test_recall_stages.py  test_recall_temporal_arm.py  test_recall_wave1.py  test_reflect_cascade.py  (+19 more)
scripts/: check_plugin_contract.py  demo_cross_machine.py  seed.py
src/reflect_kb/: __init__.py  (+5 more)
tests/: conftest.py  test_chunk_attribution.py  test_cross_encoder.py  test_domain_boost.py  test_embed_mmr.py  test_entity_store.py  test_errors.py  test_fleet_context_format.py  test_fleet_importer.py  test_issues_analyze.py  test_issues_cli.py  test_issues_dedupe.py  test_issues_distill.py  test_issues_manifest.py  test_issues_pipeline.py  test_issues_sanitize.py  test_model_daemon.py  test_recency_norm.py  test_serve_curation.py  test_typed_links_engine.py
(+253 files in other folders)
