[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "reflect-kb"
version = "0.3.0"
description = "Universal cross-harness retrieval + learning KB for AI coding agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Steven Gonsalvez" },
]
keywords = [
    "ai",
    "agents",
    "claude-code",
    "codex",
    "copilot",
    "graphrag",
    "retrieval",
    "knowledge-base",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
# Slim base deps — just what `reflect --help`, `reflect team`, `reflect
# share`, `reflect metrics ...`, and `reflect metrics dashboard sync` need.
# Heavy ML deps (sentence-transformers, torch via SBERT, nano-graphrag
# import-time chain) live in `[graph]` so a plain `pipx install .` doesn't
# pull ~2GB on every CI run. The graph_engine module already lazy-imports
# them inside `_get_graph_engine()`, so `reflect search --help` resolves
# even without `[graph]` installed.
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    # Dashboard sync client (P5.3); see src/reflect_kb/dashboard.py.
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
    "jsonschema>=4.20",
]
# Full GraphRAG stack. nano-graphrag pulls graspologic -> umap-learn ->
# pynndescent -> numba -> llvmlite. Left unpinned, the resolver backtracks to
# llvmlite 0.36.0 (py<3.10 wheels only), which fails to build on py>=3.11. The
# floors below force wheel-having modern llvmlite/numba, so a plain
# `uv tool install .[graph]` / `pip install .[graph]` resolves on py 3.11-3.14.
graph = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "tiktoken>=0.5.0",
    "nano-vectordb",
    # nano-graphrag import-time deps.
    "openai>=1.0",
    "tenacity>=8.0",
    "hnswlib>=0.7.0",
    "xxhash>=3.0",
    # Floors that keep the graspologic->numba->llvmlite chain on wheels for
    # modern Python (unpinned backtracks to llvmlite 0.36.0, no wheels >py3.9).
    "llvmlite>=0.44",
    "numba>=0.61",
    "nano-graphrag",
]
# Postgres backend (reflect_kb.postgres): the typed MemoryStore + the
# nano-graphrag PG storage adapters. psycopg is the only new dep; the
# nano-graphrag adapters also need the [graph] stack at runtime.
postgres = [
    "psycopg[binary]>=3.1",
]

[project.scripts]
reflect = "reflect_kb.cli.main:main"

[project.urls]
Homepage = "https://github.com/stevengonsalvez/ainb-reflect-memory"
Repository = "https://github.com/stevengonsalvez/ainb-reflect-memory"
Issues = "https://github.com/stevengonsalvez/ainb-reflect-memory/issues"
Specification = "https://github.com/stevengonsalvez/ai-coder-rules/blob/main/plans/reflect-v4-universal-install-spec.md"

[tool.hatch.build.targets.wheel]
packages = ["src/reflect_kb"]

[tool.pytest.ini_options]
pythonpath = ["src", "plugin/scripts"]
# Behavioral proofs live in tests/eval/behavioral/proofs/proof_*.py — their test
# FUNCTIONS are named test_* (default), but the FILE glob must include proof_*
# so a plain `pytest tests/eval/behavioral/` discovers them. Additive: no other
# proof_*.py files exist in the repo, so standard test_*/*_test discovery is
# unchanged for the 1000+ existing tests.
python_files = ["test_*.py", "*_test.py", "proof_*.py"]
markers = [
    "integration: tests that need a live Postgres (auto-skip when none reachable)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
